--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 title: Geon-Ho
 subtitle:
 description:
-author: John Doe
+author: Geon-Ho
 # Support language: de, en, fr-FR, id, ja, ko, pt-BR, pt, ru, zh-Hans, zh-hk, zh-tw
 language: ko
 date_format: '%Y-%m-%d'
@@ -227,7 +227,7 @@ social_icons:
   # KeyMapsToSocialItemKey: NameOfTheIconFromFontAwesome
   GitHub: github
   Twitter: twitter
-  Weibo: weibo
+  # Weibo: weibo
 
 
 # Sidebar Avatar
